--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,14 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+body {
+    background-image: url(/images/bg.jpg);
+    background-size: contain;
+    background-repeat: repeat-y;
+    background-positon: center top;
+    background-color: #57002a;
+}
+
 a {
     &:link, &:visited {
         @apply text-blue-500;
@@ -10,4 +18,8 @@ a {
     &:hover, &:active {
         @apply text-blue-700;
     }
+}
+
+iframe {
+    background: #fff;
 }
